--- a/resultado pronto/works.html
+++ b/resultado pronto/works.html
@@ -9,8 +9,8 @@
    <body>
       <header>
          <nav>
-            <a href="./home.html">Home</a>
-            <a href="./hardware.html">Hardware</a>
+            <a href="./index.html">Home</a>
+            <a href="./works.html">Hardware</a>
             <a href="./sobre.html">Sobre</a>
          </nav>
       </header>
