--- a/resultado pronto/sobre.html
+++ b/resultado pronto/sobre.html
@@ -10,7 +10,7 @@
       <header>
          <nav>
             <a href="./index.html">Home</a>
-            <a href="./hardware.html">Hardware</a>
+            <a href="./works.html">Hardware</a>
             <a href="./sobre.html">Sobre</a>
          </nav>
       </header>
