--- a/resultado pronto/index.html
+++ b/resultado pronto/index.html
@@ -10,23 +10,63 @@
       <header>
          <nav>
             <a href="./index.html">Home</a>
-            <a href="./hardware.html">Hardware</a>
-            <a href="./sobre.html">Sobre</a>
+            <a href="./cmd.html">CMD</a>
+            <a href="./linux.html">linux</a>
          </nav>
       </header>
-      <main>
-         <h1>Sistema Operacional</h1> 
-      </main>
-      <div class="titulo">
-         <h1>Informações sobre o Sistema Operacional</h1>
-      </div>
-      <p>sistema operacional é um programa ou um conjunto de programas cuja função é gerenciar os recursos do sistema (definir qual programa recebe atenção do processador, gerenciar memória, criar um sistema de arquivos, etc.), fornecendo uma interface entre o computador e o usuário</p>
-      <img src="./images/Sistema_Operacional.png" alt="imagem sobre sistema operacional" width="400px" height="auto" >
-      <div class="sub_titulo_CMD">
-         <h2>
-         Codigos feitos no CMD</p>
-      </div>
-      <p>Exemplo de comandos do sistema operacional</p>
-      <img src="./images/comando_listar_arquivo_pasta.jpg" alt="Arduino" width="400px" height="300px">
-
    </body>
+   <article>
+      <ul>
+         <li>
+            1 Sistema operacional - o que é?
+         </li>
+         <p>Fundamentalmente, um sistema operacional é um software, que pode ser o Linux, Windows, Android, macOS, UNIX, entre outros. No entanto, ele não resume aquilo que seus olhos conseguem ver ou ao que você consegue interagir. Em outras palavras, é um programa que conversa diretamente com o hardware da sua máquina.</p>
+         <br>
+         <li>
+            1.1 O que é o Kernel?
+         </li>
+         <p>Um kernel é o componente central de um sistema operativo, atuando como ponte entre o sistema Hardwares e software. O kernel gerencia os recursos do sistema e facilita as interações entre os componentes de hardware e software.</p>
+         <br>
+         <li>
+            2 Exemplos de sistemas Operacionais
+         </li>
+         <p>Fundamentalmente, um sistema operacional é um software, que pode ser o Linux, Windows</p>
+         <br>
+         <li>
+            3 O que é interface do sistema operacional (CLI e GUI) com print de tela
+         </li>
+         <p>Uma interface de linha de comando (CLI) é um mecanismo de software que você usa para interagir com o sistema operacional usando o teclado. Outro mecanismo é uma interface gráfica (GUI), que hoje é popular em todas as aplicações e sistemas de software.</p>
+         <br>
+         <li>
+            4 comandos do sistema operacional Linux no Git Bash (print de tela)
+         </li>
+         <p></p>
+         <br>
+         <li>
+            5 comandos do windows no CMD (print de tela)
+         </li>
+         <p></p>
+         <br>
+         <li>
+            6 O que é um sistema de versionamento? (git bash) com print de tela
+         </li>
+         <p></p>
+         <br>
+         <li>
+            7 O que é um repositório (git HUB) com print de tela com o código no git hub
+         </li>
+         <p></p>
+         <br>
+         <li>
+            8 O que é um deploy ? (print de tela)
+         </li>
+         <p></p>
+      </ul>
+   </article>
+
+
+
+
+
+
+   
