--- a/resultado pronto/index.html
+++ b/resultado pronto/index.html
@@ -34,37 +34,37 @@
          <br>
          <li>
             3 O que é interface do sistema operacional (CLI e GUI) com print de tela
-            <img src="Captura de tela 2024-04-09 112015" alt="">
+            <img src="./images/Captura de tela 2024-04-09 112015.png" alt="">
          </li>
          <p>Uma interface de linha de comando (CLI) é um mecanismo de software que você usa para interagir com o sistema operacional usando o teclado. Outro mecanismo é uma interface gráfica (GUI), que hoje é popular em todas as aplicações e sistemas de software.</p>
          <br>
          <li>
              print de tela 4 comandos do sistema operacional Linux no Git Bash 
-             <img src="Captura de tela 2024-04-09 111059.png" alt="">
+             <img src="./images/Captura de tela 2024-04-09 111059.png" alt="">
          </li>
          <br>
          <li>
             5 comandos do windows no CMD print de tela
          </li>
-         <img src="Captura de tela 2024-04-09 111802.png" alt="">
+         <img src="./images/Captura de tela 2024-04-09 111802.png" alt="">
          <br>
          <li>
             6 O que é um sistema de versionamento? (git bash) com print de tela
          </li>
          <p>O versionamento de software pode ser descrito como um processo de controle de versões, o que é estabelecido por meio de códigos. Isso permite muito mais visibilidade aos programadores, que conseguem verificar quais foram as mudanças realizadas entre uma versão e outra.</p>
-         <img src="Captura de tela 2024-04-09 111715.png" alt="">
+         <img src="./images/Captura de tela 2024-04-09 111715.png" alt="">
          <br>
          <li>
             7 O que é um repositório (git HUB) com print de tela com o código no git hub
          </li>
          <p>Um repositório, ou simplesmente repo, é um armazenamento digital centralizado que os desenvolvedores usam para fazer e gerenciar alterações no código-fonte de uma aplicação. Os desenvolvedores precisam armazenar e compartilhar pastas, arquivos de texto e outros tipos de documentos ao desenvolver software.</p>
-         <img src="Captura de tela 2024-04-09 111906.png" alt="">
+         <img src="./images/Captura de tela 2024-04-09 111906.png" alt="">
          <br>
          <li>
             8 O que é um deploy ? (print de tela)
          </li>
          <p>Deploy corresponde ao processo de implantação de um software, mas também pode significar colocar o sistema (e atualizações desse sistema) em uma determinada posição ou disponibilizá-lo para testes ou produção.</p>
-         <img src="deploy.png" alt="">
+         <img src="./images/deploy.png" alt="">
       </ul>
    </article>
 
